--- a/trunk/themes/ieeecs-HomePage-theme/docroot/_diffs/templates/search.hbs
+++ b/trunk/themes/ieeecs-HomePage-theme/docroot/_diffs/templates/search.hbs
@@ -1,4 +1,3 @@
-<script type="text/x-handlebars" data-template-name="search">
     <div class="col-md-5 col-sm-4 search-app">
         {{#view SearchApp.SearchFormView}}
         <div class="input-group">
@@ -10,13 +9,13 @@
         {{/view}}
     </div>
     <div class="col-md-1 col-sm-1 advanced-search search-app">
-        <a href="#"  {{action 'showAdvancedSearchModal'}}>Advanced</a>
+        <a href="#"  {{action "showAdvancedSearchModal"}}>Advanced</a>
     </div>
     <div class="search-results col-md-5 col-sm-5">
         <ul>
             {{#each item in content}}
             <li>
-                <p{{action 'viewContentItem' item}} class="title">{{{item.title}}}</p>
+                <p{{action "viewContentItem" item}} class="title">{{{item.title}}}</p>
                 <p class="summary">{{{item.summary}}}</p>
             </li>
             {{/each}}
@@ -33,14 +32,14 @@
                     <div class="form-group input-group advanced-search-form">
                         {{view Ember.TextField id="myhome-advanced-search-input" valueBinding="advancedSearchText" classNames="form-control" placeholder="Search for articles, conferences and more..."}}
                                 <span class="input-group-btn">
-                                    <button class="btn btn-primary" type="button" {{action 'performAdvancedSearch'}}>SEARCH</button>
+                                    <button class="btn btn-primary" type="button" {{action "performAdvancedSearch"}}>SEARCH</button>
                                 </span>
                     </div>
                     <div class="filters-link-container">
-                        <a id="disable-filters-link" href="#" {{ action 'disableFilters'}}>
+                        <a id="disable-filters-link" href="#" {{ action "disableFilters"}}>
                         Disable Filters <i class="icon-caret-up icon-fixed-width"></i>
                         </a>
-                        <a id="enable-filters-link" href="#" {{ action 'enableFilters'}}>
+                        <a id="enable-filters-link" href="#" {{ action "enableFilters"}}>
                         Enable Filters <i class="icon-caret-down icon-fixed-width"></i>
                         </a>
                     </div>
@@ -82,30 +81,30 @@
                             {{#unless item.isNoResult}}
                             <span {{bindAttr class=":badge item.contentType"}}>{{item.contentType}}</span>
                             {{/unless}}
-                            <h5><a href="#" {{action 'viewContentItem' item}}>{{{item.title}}}</a></h5>
+                            <h5><a href="#" {{action "viewContentItem" item}}>{{{item.title}}}</a></h5>
                             <p class="summary">{{{item.summary}}}</p>
                             <div {{ bindAttr class=":alert :alert-block :alert-success :fade :hide item.confirmId :success" }}>
-                            <button type="button" class="close" aria-hidden="true" {{ action 'hideAddBundleSuccess' item.confirmId }}>x</button>
+                            <button type="button" class="close" aria-hidden="true" {{ action "hideAddBundleSuccess" item.confirmId }}>x</button>
                             <h4><i class="icon-check-sign icon-3x icon-fixed-width"></i>Added To Bundle!</h4>
-                        </div> ## /.success
+                        </div>
                         <div {{ bindAttr class=":alert :alert-block :alert-danger :fade :hide item.confirmId :error" }}>
-                        <button type="button" class="close" aria-hidden="true" {{ action 'hideAddBundleError' item.confirmId}}>x</button>
+                        <button type="button" class="close" aria-hidden="true" {{ action "hideAddBundleError" item.confirmId}}>x</button>
                         {{#unless bundleLimitError}}
                         <p>
                             <i class="icon-warning-sign icon-3x icon-fixed-width"></i>
                             Your bundle is at its limit, would you like to increase the size?
-                            <a class="btn btn-default" href="#" {{ action 'goToBundlePurchase' item }}>Make it happen</a>
+                            <a class="btn btn-default" href="#" {{ action "goToBundlePurchase" item }}>Make it happen</a>
                         </p>
                         {{else}}
                         <h4><i class="icon-exclamation-sign icon-3x icon-fixed-width"></i>There was a problem adding this item to your bundle, please try again or contact help@computer.org.</h4>
                         {{/unless}}
-                    </div> ## /.error
+                    </div>
                     <div {{ bindAttr class=":alert :alert-block :alert-warning :fade :hide item.confirmId :warning" }}>
-                    <button type="button" class="close" aria-hidden="true"  {{ action 'hideAddBundleConfirm' item.confirmId }}>x</button>
+                    <button type="button" class="close" aria-hidden="true"  {{ action "hideAddBundleConfirm" item.confirmId }}>x</button>
                     <p>
                         <i class="icon-warning-sign icon-3x icon-fixed-width"></i>
                         Are you sure you would like to add this item to your bundle?
-                        <button {{bindAttr class=":btn :btn-default item.isSavingToBundle:disabled"}} {{ action 'addItemToBundle' item item.confirmId}} >
+                        <button {{bindAttr class=":btn :btn-default item.isSavingToBundle:disabled"}} {{ action "addItemToBundle" item item.confirmId}} >
                         {{#unless item.isSavingToBundle }}
                         Yes
                         {{else}}
@@ -113,20 +112,20 @@
                         {{/unless}}
                         </button>
                     </p>
-                </div> ## /.warning
+                </div>
                 {{#unless item.isNoResult}}
-                <a href="#" {{ bindAttr class=":btn :btn-info :btn-xs item.hasFullAccess:hide"}} {{ action 'showAddBundleConfirm' item.confirmId }} >Add To Bundle</a>
+                <a href="#" {{ bindAttr class=":btn :btn-info :btn-xs item.hasFullAccess:hide"}} {{ action "showAddBundleConfirm" item.confirmId }} >Add To Bundle</a>
                 {{/unless}}
             </div>
             {{/each}}
-        </div> ## /.advanced-search-results
+        </div>
         {{#unless noResultsFound}}
         <div class="advanced-search-pagination">
             <ul class="pagination pagination-sm">
                 {{#unless hasPrevPage}}
                 <li class="disabled"><a href="#">&laquo;</a></li>
                 {{else}}
-                <li>{{#linkTo 'search.page' prevPage target="controller"}}&laquo;{{/linkTo}}</li>
+                <li>{{#linkTo "search.page" prevPage target="controller"}}&laquo;{{/linkTo}}</li>
                 {{/unless}}
                 {{#each pages}}
                 {{view SearchApp.PaginationView contentBinding="this"}}
@@ -134,13 +133,12 @@
                 {{#unless hasNextPage}}
                 <li class="disabled"><a href="#">&raquo;</a></li>
                 {{else}}
-                <li>{{#linkTo 'search.page' nextPage target="controller"}}&raquo;{{/linkTo}}</li>
+                <li>{{#linkTo "search.page" nextPage target="controller"}}&raquo;{{/linkTo}}</li>
                 {{/unless}}
             </ul>
-        </div> ## /.advanced-search-pagination
+        </div>
         {{/unless}}
     </div>
-    </div>## /.modal-content
-    </div>## /.modal-dialog
-    </div>## /#advanced-search-modal
-</script>
+    </div>
+    </div>
+    </div>
