--- a/trunk/themes/ieeecs-HomePage-theme/docroot/_diffs/templates/pagination.hbs
+++ b/trunk/themes/ieeecs-HomePage-theme/docroot/_diffs/templates/pagination.hbs
@@ -1,5 +1,1 @@
-{{#with view}}
-{{#linkTo "search.page" page}}
-{{content.page_id}}
-{{/linkTo}}
-{{/with}}
+{{#with view}}{{#linkTo "search.page" page}}{{content.page_id}}{{/linkTo}}{{/with}}
