--- a/trunk/themes/ieeecs-HomePage-theme/docroot/_diffs/templates/portal_normal.vm
+++ b/trunk/themes/ieeecs-HomePage-theme/docroot/_diffs/templates/portal_normal.vm
@@ -214,8 +214,8 @@
                 width: 800px !important;
             }
         }
-
     </style>
+
     <script type="text/javascript" src="/ieeecs-HomePage-theme/js/bowser.min.js"></script>
     <script type="text/javascript">
         #*
@@ -232,12 +232,16 @@
             (bowser.chrome && bowser.version < 11)) {
             window.location = '/portal/web/myhome/browser';
         }
+        // make sure console is available
+        if (!window.console) window.console = {};
+        if (!window.console.log) window.console.log = function () {};
     </script>
     ## HTML5 shim, for IE6-8 support of HTML5 elements
     <!--[if lt IE 9]>
     	<script type="text/javascript" src="/ieeecs-HomePage-theme/js/html5shiv.js"></script>
         <script type="text/javascript" src="/ieeecs-HomePage-theme/js/respond.min.js"></script>
     <![endif]-->
+
 
     ## Fav and touch icons
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="#">
